@@ -20,3 +20,5 @@ Known bugs of pkTriggerCord:
   (e.g. --frames 200 --delay 120)
 
   --select_af_point Auto-11 changes to Auto-5 instead
+
+  Top LCD panel is flashing
